# python_ai_server

./: .gitignore  ARCHITECTURE_REFACTORING.md  BUG_FIX_SUMMARY.md  CONTROLLER_REFACTORING_SUMMARY.md  CONTROLLER_SCAN_EXPLANATION.md  DOCS_REORGANIZATION_SUMMARY.md  Django-Vue3-Admin 系统功能数据表与API接口文档.md  LOGGING_IMPROVEMENT.md  LOG_BUFFERING_FIX.md  LOG_SIMPLIFICATION_SUMMARY.md  README.md  RELOAD_MODE_EXPLANATION.md  SERVICE_ARCHITECTURE.md  STARTUP_GUIDE.md  STARTUP_LOG_OPTIMIZATION.md  SUMMARY.md  TTS_API_IMPLEMENTATION_SUMMARY.md  XUNFEI_CONFIG.md  alembic.ini  check_server.py  config.example.yaml  config.tts.yaml  env.example  main.py  migrate.py  openapi.json  pyproject.toml  requirements.txt  run_with_log.py  start_server.bat  test_server_error.py  分析创建智能体与工作流配合的最佳实践和功能.md  接口.md  语音大模型.md  语音大模型的特点.md
.cursor/rules/: base.mdc  controller_structure.md
admin_ui/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
alembic/: env.py
app/: __init__.py  framework.py
app/core/: __init__.py  auto_crud.py  (+5 more)
docs/: README.md  annotation_routing.md  api_framework_simplification.md  auto_model_discovery.md  core_features_guide.md  database_quick_start.md  file_reorganization.md  file_reorganization_v2.md  list.md  middleware_system.md  model_file_reorganization.md  multi_database_guide.md  orm_reorganization.md  quick_start_guide.md  rbac_system.md  repository_merge.md  service_layer_architecture.md  short_parameters_guide.md
examples/: annotation_routing_example.py  api_usage.py  auto_crud_example.py  auto_model_discovery_example.py  base_model_example.py  core_features_demo.py  database_config_examples.py  demo_no_naming.py  elegant_routing_example.py  fastapi_controller_example.py  middleware_examples.py  multi_database_example.py  prefix_explanation.py  query_builder_example.py  rbac_examples.py  service_layer_example.py  short_parameters_example.py  simple_routing_example.py  smart_middleware_example.py  smart_orm_example.py  sqlalchemy_advanced_queries.py  tts_api_example.py  version_comparison.py
frontend/: README.md  package-lock.json  package.json
tests/: test_annotation_routing.py
(+207 files in other folders)
